--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>dev.m7wq</groupId>
+  <groupId>dev.m7wq.qshopapi</groupId>
   <artifactId>qShopAPI</artifactId>
-  <version>1.1</version>
+  <version>version-1.1</version>
   <packaging>jar</packaging>
 
   <name>qShopAPI</name>
@@ -58,10 +58,6 @@
           <id>sonatype</id>
           <url>https://oss.sonatype.org/content/groups/public/</url>
       </repository>
-      <repository>
-          <id>jitpack.io</id>
-          <url>https://jitpack.io</url>
-      </repository>
   </repositories>
 
   <dependencies>
@@ -70,12 +66,6 @@
           <artifactId>spigot-api</artifactId>
           <version>1.8.8-R0.1-SNAPSHOT</version>
           <scope>provided</scope>
-      </dependency>
-
-      <dependency>
-          <groupId>dev.m7wq</groupId>
-          <artifactId>qShopAPI</artifactId>
-          <version>1.1</version>
       </dependency>
   </dependencies>
 </project>
