--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>dev.m7wq.qshopapi</groupId>
   <artifactId>qShopAPI</artifactId>
-  <version>version-1.1</version>
+  <version>beta-1.1</version>
   <packaging>jar</packaging>
 
   <name>qShopAPI</name>
